--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <button class="resetBtn" id="reset" onclick="resetArray()">Reset Array</button>
     <button class="btn" id="bubble" onclick="runBubble()">Bubble Sort</button>
     <button class="btn" disabled onclick="">Selection Sort</button>
-    <button class="btn" disabled onclick="">Heap Sort</button>
+    <button class="btn" disabled onclick="">Insertion Sort</button>
     <button class="btn" id="merge" onclick="runMergeSort()">Merge Sort</button>
     <button class="btn" disabled onclick="">Count Sort</button>
     <button class="btn" disabled onclick="">Radix Sort</button>
