selection sort is actually insertion sort

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <div class="controls">
     <button class="resetBtn" id="reset" onclick="resetArray()">Reset Array</button>
     <button class="btn" id="bubble" onclick="runBubble()">Bubble Sort</button>
-    <button class="btn" id="selection" onclick="runSelection()">Selection Sort</button>
-    <button class="btn" disabled onclick="">Insertion Sort</button>
+    <button class="btn" disabled onclick="">Selection Sort</button>
+    <button class="btn" id="insertion" onclick="runInsertion()">Insertion Sort</button>
     <button class="btn" id="merge" onclick="runMergeSort()">Merge Sort</button>
     <button class="btn" disabled onclick="">Count Sort</button>
     <button class="btn" disabled onclick="">Radix Sort</button>
