--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="controls">
     <button class="resetBtn" id="reset" onclick="resetArray()">Reset Array</button>
     <button class="btn" id="bubble" onclick="runBubble()">Bubble Sort</button>
-    <button class="btn" disabled onclick="">Selection Sort</button>
+    <button class="btn" id="selection" disabled onclick="runSelection()">Selection Sort</button>
     <button class="btn" id="insertion" onclick="runInsertion()">Insertion Sort</button>
     <button class="btn" id="merge" onclick="runMergeSort()">Merge Sort</button>
     <button class="btn" disabled onclick="">Count Sort</button>
