bubbleSort re-animated

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
   <div class="controls">
-    <button class="resetBtn" id="reset" onclick="resetArray()">Reset Array</button>
+    <button class="resetBtn" id="reset" onclick="refreshPage()">Reset Array</button>
     <button class="btn" id="bubble" onclick="runBubble()">Bubble Sort</button>
     <button class="btn" id="selection" disabled onclick="runSelection()">Selection Sort</button>
     <button class="btn" id="insertion" onclick="runInsertion()">Insertion Sort</button>
