Quick Sort completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="btn" id="selection" disabled onclick="runSelection()">Selection Sort</button>
     <button class="btn" id="insertion" onclick="runInsertion()">Insertion Sort</button>
     <button class="btn" id="merge" onclick="runMergeSort()">Merge Sort</button>
-    <button class="btn" disabled onclick="">Quick Sort</button>
+    <button class="btn" id="quick" onclick="runQuickSort()">Quick Sort</button>
     <button class="btn" id="radix" onclick="runRadixSort()">Radix Sort</button>
   </div>
 
